remove loggers